This commit changes stops the overflow for the jumbotron div

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 .jumbotron
 {
 	position: absolute;
-	margin-left: 10%;
+	padding-left: 10%;
 	height: 100%;
 	width: 100%;
 }
